--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../EXPORTS/ObaniJeux/1 Bit-jam.exe"
+export_path="../EXPORTS/ObaniJeux/1-bit/ShepardToTheVoid_Windows/1 Bit-jam.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -70,7 +70,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../EXPORTS/ObaniJeux/1 Bit-jam.x86_64"
+export_path="../EXPORTS/ObaniJeux/1-bit/ShepardToTheVoid_Linux/1 Bit-jam.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -213,7 +213,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../EXPORTS/ObaniJeux/1-bit/ShepardToTheVoid_Web/1 Bit-jam.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
